              silently instead of with a clear error message in an environment
              that does not provide Unix process management.  Always broken.
              (pm_system_lp and pm_system_vp were new in Netpbm 10.40
              (September 2007), but wouldn't even compile until Netpbm 10.42
              (March 2008)).

              Build: don't try to build standardppmdfont.c if it already
              exists (so don't require ppmdcfont to exist).  Broken around
              Netpbm 10.35 (2006).

              Build: Define _XOPEN_SOURCE=500 in source files that use M_PI.
              While C libraries in the past have always provided this with
              just _XOPEN_SOURCE=null, it appears that M_PI is actually
              defined by Single Unix Specification 2, aka UNIX98, for which
              you need _XOPEN_SOURCE=500, and Cygwin has changed to enforce
              this.

              Build: document MinGW _XOPEN_SOURCE incompatibility and add
              warning to Configure.

              Debian packaging: fix bug: don't try to include Manweb files, as
              it is no longer packaged by 'make package'.

17.03.28 BJH  Release 10.78.00

              ppmpat: Add -color.

              ppmpat: Add -argyle1, -argyle2.

              pnmtotiff: Fail with -miniswhite or -minisblack on color image
              rather than produce an invalid TIFF.

              tifftopnmcmyk: Default rows per strip to the TIFF library
              default instead of whatever yields 8K strips.

              --version global option: with SOURCE_DATE_EPOCH environment
              variable, display source code datetime instead of build
              datetime.  And when displaying build datetime, do it in the
              local time of the process running the command instead of the
              process that did the build.

              tifftonm: Fix incorrect PBM output with two-color paletted TIFF